# matrx-utils

./: .cursorignore  .env.example  .gitignore  LICENSE  MODULE_README.md  README.md  TASK.md  cloud-readme.md  main.py  matrx-utils.rar  pyproject.toml  pyrightconfig.json  release.sh  run.py  setup.py  test.py
app/api/: __init__.py
checks/: health_check.py
common/: __init__.py
common/file_management/: base_handler.py  batch_handler.py  file_handler.py  file_manager.py
common/prints/: fancy_prints.py
core/: __init__.py  asgi.py  settings.py  system_logger.py  task_queue.py
core/services/: socketio_app.py
data_handling/: data_transformer.py
data_handling/validation/: __init__.py
database/: analyze_schema_output.py  constants.py  manager.py  models.py  models_backwards_compatability.py  schema_structure.py  state.py
database/client/: postgres_connection.py
database/concept/: crud.py
database/orm/: error_handling.py  exceptions.py  models.py  samples.py  transactions.py
database/python_functions/: table_relationships.py
database/python_sql/: complete_relationship_analysis.py  complete_relationship_analysis_pandas.py  component_prop_determination.py  data_class_base_extended.py  db_objects.py  relationship_definition.py  sample_json_output.json  table_columns.py  table_detailed_relationships.py  table_relationships.py  table_typescript_relationship.py
database/schema/: tables.py
database/schema_builder/: generator.py  schema_manager.py
database/utils/: sql_utils.py
matrx_utils/: __init__.py  conf.py  dev_conf.py
matrx_utils/cloud/: __init__.py
matrx_utils/common/: __init__.py
scripts/: publish.sh  release.sh
src/: MODULE_README.md
tests/: MODULE_README.md  get_dir_structure_test.py  print_link_test.py
(+485 files in other folders)
