[project]
name = "matrx-utils"
version = "1.0.12"
description = "Basic utilities for matrx"
readme = "README.md"
authors = [
    { email = "admin@aimatrx.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.59",
    "boto3-stubs[s3]>=1.42.59",
    "dotenv>=0.9.9",
    "pypdfium2>=4.30.0",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "supabase>=2.28.0",
]

[project.scripts]
matrx-utils = "matrx_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/matrx_utils"]

